# kate-russell

addons/: CMakeLists.txt
addons/gdbplugin/: configview.cpp
addons/kate-russell-plugin/: BottomTab.ui  CMakeLists.txt  Client.cpp  Client.hpp  Combinations.cpp  Combinations.hpp  Config.cpp  Config.hpp  Connection.cpp  Connection.hpp  Enums.cpp  Enums.hpp  ErrorParser.cpp  ErrorParser.hpp  Execute.cpp  Execute.hpp  HypNode.cpp  HypNode.hpp  HypNode.ui  Icon.cpp  Icon.hpp  Indexes.cpp  Indexes.hpp  Kind.hpp  LatexToUnicode.cpp  LatexToUnicode.hpp  Launcher.cpp  Launcher.hpp  Navigation.cpp  Navigation.hpp  Outline.cpp  Outline.hpp  Plugin.cpp  Plugin.hpp  ProjectConfig.hpp  ProjectConfigOld.hpp  ProjectConfigTab.cpp  ProjectConfigTab.hpp  ProjectConfig_old.cpp  ProjectsTab.ui  (+73 more)
addons/kate-russell-plugin/icons/: CMakeLists.txt
addons/kate-russell-plugin/syntax/: CMakeLists.txt  del.xml  mm.xml  rus.xml  smm.xml
addons/symbolviewer/: plugin_katesymbolviewer.h
